# sap-mdm-cloud-migration-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  Makefile  README.md  databricks.yml  pyproject.toml
.github/workflows/: ci.yml
compose/: docker-compose.yml
config/: cutover_schedule.yaml  dq_rules.yaml
docs/: ARCHITECTURE.md  COST_ANALYSIS.md  LOCAL_DEVELOPMENT.md  MIGRATION_LIFECYCLE.md  PERFORMANCE.md  RECONCILIATION_STRATEGY.md  ROLLBACK_PLAYBOOK.md  RUNBOOK.md
infra/terraform/: main.tf  outputs.tf  variables.tf
infra/terraform/envs/: dev.backend.hcl.example  dev.tfvars.example  prod.tfvars.example
infra/terraform/modules/databricks/: main.tf
infra/terraform/modules/dms/: main.tf
infra/terraform/modules/eventbridge/: main.tf
infra/terraform/modules/glue/: main.tf
infra/terraform/modules/iam/: main.tf
infra/terraform/modules/kms/: main.tf
infra/terraform/modules/lambda/: main.tf
infra/terraform/modules/monitoring/: main.tf
infra/terraform/modules/networking/: main.tf
infra/terraform/modules/rds/: main.tf
infra/terraform/modules/redshift/: main.tf
infra/terraform/modules/s3/: main.tf
infra/terraform/modules/secrets/: main.tf
infra/terraform/modules/stepfunctions/: main.tf
infra/terraform/modules/vpc/: main.tf
notebooks/: 01_full_reconciliation.py  02_incremental_reconciliation.py  03_post_load_validation.py  04_pii_masking_audit.py
scripts/: cutover.sh  deploy.sh  rollback.sh  seed-sample-data.py
src/lambdas/: __init__.py  s3_trigger.py  sfn_notifier.py
src/migration/: __init__.py  cli.py
src/migration/cdc/: __init__.py  auto_loader.py  dms_config.py
src/migration/extractors/: __init__.py  sap_bw.py  sap_hana.py
src/migration/loaders/: __init__.py  postgres_loader.py  redshift_loader.py
src/migration/orchestration/: __init__.py  batch_migrate.asl.json  glue_extract_job.py  glue_load_job.py  migrate_table.asl.json  rollback.asl.json  state_machines.py
src/migration/schemas/: __init__.py  contracts.py  mdm_contracts.py
src/migration/transformers/: __init__.py  ddl_generator.py  type_coercer.py
src/migration/utils/: __init__.py  idempotency.py  logging_config.py  metrics.py  secrets.py  spark_session.py
src/migration/validators/: __init__.py  great_expectations_runner.py  reconciliation.py
tests/: conftest.py
tests/unit/: test_cdc_config.py  test_contracts.py  test_reconciliation.py  test_transformers.py
